--- a/index.html
+++ b/index.html
@@ -3,8 +3,37 @@
 <head>
   <meta charset="utf-8">
   <title>Andres Felipe Burbano</title>
+
+  <!-- Link to bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <!-- Link to CSS file -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>Sara te amo !!!</h1>
+  <div class="embuelto">
+      <header>
+        <div class="marco">
+          <a href="#">
+            <img src="images/logo_ab.png" alt="Portafolio Andrés Burbano">
+          </a>
+          <input type="checkbox" id="btn-ham"/><label for="btn-ham"></label>
+          <nav>
+            <a href="#" style="display:none">Yo</a>
+            <a href="#" style="display:none">Saludo</a>
+            <a href="#perfil" class="active">Perfil</a>
+            <a href="#skills">Habilidades</a>
+            <a href="#experiencia">Trabajo y Educacion</a>
+            <a href="#portafolio">Portafolio</a>
+            <a href="#contacto">Contacto</a>
+          </nav>
+        </div>
+      </header>
+    </div>
+
+    <!-- Link to js bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
