Create a banner section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <!-- Link to bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+  <!-- Link to animate CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+
   <!-- Link to CSS file -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -30,6 +33,21 @@
         </div>
       </header>
     </div>
+
+    <section id="banner">
+      <div class="marco">
+        <div class="banner">
+          <div class="grup-1">
+            <div class="nube">
+              <img class="animated infinite pulse" src="images/logo_banner_1.png" alt="logo Andrés Burbano" />
+            </div>
+          </div>
+          <div class="img-banner">
+            <img src="images/pic_banner_3.jpg" draggable="false" alt="foto de banner" />
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Link to js bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
