--- a/index.html
+++ b/index.html
@@ -49,6 +49,61 @@
       </div>
     </section>
 
+    <section id="saludo"></section>
+
+    <section id="perfil">
+      <div class="marco">
+        <div id="carrusel">
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+
+              <div class="carousel-item active">
+                <img src="images/pic_profile_1.jpg" class="d-block w-90 h-70">
+              </div>
+
+              <div class="carousel-item">
+                <img src="images/pic_profile_2.jpg" class="d-block w-90 h-70">
+              </div>
+
+              <div class="carousel-item">
+                <img src="images/pic_profile_3.jpg" class="d-block w-90 h-70">
+              </div>
+
+              <div class="carousel-item">
+                <img src="images/pic_profile_4.jpg" class="d-block w-90 h-70">
+              </div>
+
+              <div class="carousel-item">
+                <img src="images/pic_profile_5.jpg" class="d-block w-90 h-70">
+              </div>
+
+              <div class="carousel-item">
+                <img src="images/pic_profile_6.jpg" class="d-block w-90 h-70">
+              </div>
+
+              <div class="carousel-item">
+                <img src="images/pic_profile_7.jpg" class="d-block w-90 h-70">
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div id="info-perfil">
+          <h2>Perfil</h2>
+          <h3>Nombre</h3>
+          <p>Andrés Felipe Burbano</p>
+          <h3>Fecha de nacimiento</h3>
+          <p>12 de Mayo de 1981</p>
+          <h3>Dirección</h3>
+          <p>Cali, Colombia</p>
+          <h3>Nacionalidad</h3>
+          <p>Colombiana</p>
+        </div>
+      </div>
+    </section>
+
     <!-- Link to js bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
