Create skills section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,43 @@
       </div>
     </section>
 
+    <section id="skills">
+      <div class="marco">
+        <div class="hardskills">
+          <h2><strong>Hard</strong> skills</h2>
+          <ul>
+          <li>Gestión de mantenimiento</li>
+          <li>Mejoras de procesos</li>
+          <li>Procesos de esterilización</li>
+          <li>Análisis de datos</li>
+          <li>Diseño en CAD</li>
+          <li>JavaScript</li>
+          <li>Html5 & css3</li>
+          <li>Bootstrap</li>
+          <li>Ruby on Rails</li>
+          <li>Y...</li>
+          </ul>
+          <p>Divirtiéndome<br> en el <br><strong>camino</strong></p>
+        </div>
+        <div class="softskills">
+          <h2><strong>Soft</strong> skills</h2>
+          <ul>
+          <li>Resolución de problemas</li>
+          <li>Toma de decisiones</li>
+          <li>Honestidad</li>
+          <li>Responsable</li>
+          <li>Creatividad</li>
+          <li>Confiable</li>
+          <li>Entusiasta</li>
+          <li>Practico</li>
+          <li>Adaptabilidad</li>
+          <li>Y...</li>
+          </ul>
+          <p>Trabajando <br> de manera<br> <strong>inteligente</strong></p>
+        </div>
+      </div>
+    </section>
+
     <!-- Link to js bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
