--- a/index.html
+++ b/index.html
@@ -141,6 +141,15 @@
       </div>
     </section>
 
+    <section id="quote">
+      <div class="marco">
+        <blockquote>
+          <p>"La manera mas auténtica y honesta de expresar la FE es creer en nosotros mismos."</p>
+          <footer>anonimo</footer>
+        </blockquote>
+      </div>
+    </section>
+
     <!-- Link to js bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
