Create a experience section

--- a/index.html
+++ b/index.html
@@ -150,6 +150,83 @@
       </div>
     </section>
 
+    <section id="experiencia">
+      <div class="marco">
+        <div class="bloque">
+          <h2><strong>trabajo y</strong> educacion</h2>
+          <div class="metros">
+            <span>NOW OR NEVER</span>
+          </div>
+          <div class="timeline">
+            <article>
+              <span>T</span>
+              <p>Feb. 2013 – Jun. 2017</p>
+              <div class="line">
+                <span></span>
+              </div>
+              <h3>Contratista de mantenimiento de equipos</h3>
+              <h4>Mainco Health Care S.A.S.</h4>
+              <ul>
+                <li>Generación de indicadores de calidad</li>
+                <li>Diseño de rutinas de mantenimiento preventivo</li>
+                <li>Diseño de plan de mantenimiento</li>
+                <li>Desarrollo presupuesto en base cero</li>
+                <li>Coordinación de mantenimiento correctivos</li>
+                <li>Ejecución de rutinas de mantenimiento</li>
+                <li>Diseño de formatos de mantenimiento</li>
+              </ul>
+            </article>
+            <article>
+              <span>T</span>
+              <p>Nov. 2011 – Feb. 2013</p>
+              <div class="line">
+                <span></span>
+              </div>
+              <h3>Ingeniero mecatrónico</h3>
+              <h4>Mainco Health Care S.A.S.</h4>
+              <ul>
+                <li>Coordinación del área de mantenimiento</li>
+                <li>Mejora de procesos de la central</li>
+                <li>Implementación del plan de mantenimiento</li>
+                <li>Coordinación de mantenimientos preventivos</li>
+              </ul>
+            </article>
+            <article>
+              <span>T</span>
+              <p>Nov. 2008 – Nov. 2011</p>
+              <div class="line">
+                <span></span>
+              </div>
+              <h3>Gerente y coordinador de mantenimiento</h3>
+              <h4>Ciento1 Biomédica</h4>
+              <ul>
+                <li>Coordinación del área de mantenimiento</li>
+                <li>Diseño del plan de mantenimiento</li>
+                <li>Implementación del plan de mantenimiento</li>
+                <li>Coordinación de mantenimientos preventivos</li>
+                <li>Desarrollar el plan estratégico de la empresa</li>
+              </ul>
+            </article>
+            <article>
+              <span>E</span>
+              <p>2002 – 2007</p>
+              <div class="line">
+                <span></span>
+              </div>
+              <h3>Ingeniero mecatrónico</h3>
+              <h4>Universidad autónoma de occidente</h4>
+              <ul>
+                <li>Grado final 09/2007</li>
+              </ul>
+            </article>
+          </div>
+          <figure class="bgpipe">
+            <img src="images/pic_work_af.jpg" alt="">
+          </figure>
+        </div>
+      </div>
+    </section>
+
     <!-- Link to js bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
