--- a/index.html
+++ b/index.html
@@ -227,6 +227,113 @@
       </div>
     </section>
 
+        <section id="portafolio">
+
+      <div class="marco">
+        <h2>Portafolio</h2>
+        <a href="#openModal">
+          <div class="work">
+            <img src="images/pic_work_1.jpeg" alt="tarbajo 1" class="image_over">
+            <div class="overlay">
+              <div class="overtext">
+                <h3>Mainco Health Care S.A.S.</h3>
+                <h4>Coordinador de mantenimiento</h4>
+                <ul>
+                  <li>Mejora de proceso</li>
+                  <li>0 PMM en planta</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </a>
+        <div id="openModal" class="modalDialog">
+          <div>
+            <div class="marco">
+              <a href="#close" title="Close" class="close">X</a>
+                <h2 class="titleModal" >Mainco Health Care S.A.S.</h2>
+                <p>Esto se logró gracias a que el equipo apoyo brindado por todos las personas que hacían parte de la central de esterilización.</p>
+                <h3>Coordinador de mantenimiento</h3>
+                <h3>Logros</h3>
+                <h3>0 PPM en el área de trabajo.</h3>
+                <h3>Como:</h3>
+                <ul>
+                  <li>Mejoras en la tubería de extracción de ETO.</li>
+                  <li>Trabajo de la tubería en vacío.</li>
+                </ul>
+                <h3>Ambiente de trabajo libre de contaminación durante todas las fases del proceso.</h3>
+                <h3>Mejoras en el ciclo de esterilización</h3>
+                <h3>Como:</h3>
+                <ul>
+                  <li>Aumento de nivel de esterilización ( De 381 mg/L a 514 mg/L)</li>
+                  <li>Cambio de mezcla de ETO ( De ETO 1090 a ETO 2080 )</li>
+                  <h3>Reducción de tiempo de ciclo.</h3>
+                  <h3>Como:</h3>
+                  <ul>
+                    <li>Pasa de 340 min de esterilización a 300 min.</li>
+                    <li>Pasa de 45 min de inyección a 25 min.</li>
+                    <li>Un ciclo de esterilización 60 min más rápido.</li>
+                  </ul>
+                  <h3>0 biológicos positivos</h3>
+                  <h3>Como:</h3>
+                  <ul>
+                    <li>Eliminar todos los reproceso generados en la parte final del ciclo. Solo consumir 20kiolos del cilindro.</li>
+                    <li>Se pasa de 15% de reprocesos a solo el 2%.</li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+
+        <a href="#">
+          <div class="work">
+            <img src="images/pic_work_1.jpeg" alt="tarbajo 1" class="image_over">
+            <div class="overlay">
+              <div class="overtext">Hello world !</div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="work">
+            <img src="images/pic_work_1.jpeg" alt="tarbajo 1" class="image_over">
+            <div class="overlay">
+              <div class="overtext">Hello world !</div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="work">
+            <img src="images/pic_work_1.jpeg" alt="tarbajo 1" class="image_over">
+            <div class="overlay">
+              <div class="overtext">Hello world !</div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="work">
+            <img src="images/pic_work_1.jpeg" alt="tarbajo 1" class="image_over">
+            <div class="overlay">
+              <div class="overtext">Hello world !</div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="work">
+            <img src="images/pic_work_1.jpeg" alt="tarbajo 1" class="image_over">
+            <div class="overlay">
+              <div class="overtext">Hello world !</div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="work">
+            <img src="images/pic_work_1.jpeg" alt="tarbajo 1" class="image_over">
+            <div class="overlay">
+              <div class="overtext">Hello world !</div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </section>
+
     <!-- Link to js bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
