Create a contact section

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   <!-- Link to animate CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
+  <!-- Link to fontawesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
   <!-- Link to CSS file -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
   <div class="embuelto">
       <header>
@@ -331,6 +335,65 @@
             </div>
           </div>
         </a>
+      </div>
+    </section>
+
+    <section id="contacto">
+      <div class="marco">
+        <h2>Contacto</h2>
+        <p>Tienes un proyecto en mente, y crees que puedo ayudarte ? <br> Siente libre de enviarme un e-mail <a href="#">yo@andresburbano.com</a></p>
+        <div class="formula">
+          <div class="uno">
+            <input type="text" name="nombre" placeholder="Tu nombre">
+            <input type="text" name="e-mail" placeholder="Tu E-mail">
+            <textarea name="mensaje" rows="8" cols="80" placeholder="Mensaje..."></textarea>
+            <button type="submit" name="button">enviar</button>
+          </div>
+        </div>
+        <div class="redes">
+          <div class="uno">
+            <a target="_blank" href="archivos/AndresBurbanoCV.pdf">
+              <div>
+                <div class="icono">
+                  <span>
+                    <i class="fa fa-file" aria-hidden="true"></i>
+                  </span>
+                </div>
+                <span>Download a curriculum vitae </span>
+              </div>
+            </a>
+            <a target="_blank" href="https://www.linkedin.com/in/andres-felipe-burbano-santa-9291895b/">
+              <div>
+                <div class="icono">
+                  <span>
+                    <i class="fab fa-linkedin" aria-hidden="true"></i>
+                  </span>
+                </div>
+                <span> Connect to me Linkedin </span>
+              </div>
+            </a>
+            <a target="_blank" href="https://twitter.com/PipeBurbano12">
+              <div>
+                <div class="icono">
+                  <span>
+                    <i class="fab fa-twitter" aria-hidden="true"></i>
+                  </span>
+                </div>
+                <span>Follow me on Twitter </span>
+              </div>
+            </a>
+            <a target="_blank" href="https://github.com/Pipe12">
+              <div>
+                <div class="icono">
+                  <span>
+                    <i class="fab fa-github" aria-hidden="true"></i>
+                  </span>
+                </div>
+                <span>Follow me on Github </span>
+              </div>
+            </a>
+          </div>
+        </div>
       </div>
     </section>
 
