Config a contact form with Fromspree.io

--- a/index.html
+++ b/index.html
@@ -344,10 +344,12 @@
         <p>Tienes un proyecto en mente, y crees que puedo ayudarte ? <br> Siente libre de enviarme un e-mail <a href="#">yo@andresburbano.com</a></p>
         <div class="formula">
           <div class="uno">
-            <input type="text" name="nombre" placeholder="Tu nombre">
-            <input type="text" name="e-mail" placeholder="Tu E-mail">
-            <textarea name="mensaje" rows="8" cols="80" placeholder="Mensaje..."></textarea>
-            <button type="submit" name="button">enviar</button>
+            <form action="https://formspree.io/andresburbano2105@gmail.com" method="POST" />
+              <input type="text" name="name" placeholder="Tu nombre">
+              <input type="text" name="e-mail" placeholder="Tu E-mail">
+              <textarea name="mensaje" rows="8" cols="80" placeholder="Mensaje..."></textarea>
+              <button type="submit" name="button">enviar</button>
+            </form>
           </div>
         </div>
         <div class="redes">
